--- a/style/mobile.css
+++ b/style/mobile.css
@@ -44,4 +44,12 @@
     .cards {
         grid-template-columns: repeat(1, 1fr);
     }
+
+    /* Feature */
+    .feture {
+        flex-direction: column;
+        margin: 40px;
+        gap: 10px;
+        text-align: center;
+    }
 }
